tests/errors/test-location-warning.sac
// This test asserts that location warnings are printed as `filename:line:column Warning:`
// SAC_TEST|include common.mk
// SAC_TEST|SAC2C_FLAGS += -v1 -b 7:exp
// SAC_TEST|CALL_SAC2C := $(SAC2C) $(SAC2C_FLAGS)
//
// SAC_TEST|all: <file-name>
// SAC_TEST|<tab>$(CALL_SAC2C) $< 2>&1 | grep -Pi "^.*:\d+:\d+ Warning:$$" | $(GREP_COMMAND_OUTPUT) "" 1

provide all;